--- a/templates/masters_template.html
+++ b/templates/masters_template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>DMR Server monitor - Masters</title>
+<title>on.dashboard</title>
 <script type="text/javascript" src="scripts/hbmon.js"></script>
 <link rel="stylesheet" type="text/css" href="css/styles.css" />
 <style>
@@ -10,12 +10,10 @@
 .button { <<<theme_color>>> }
 .dropbtn { <<<theme_color>>> }
 </style>
-<meta name="description" content="Copyright (c) 2016-2021.The Regents of the K0USY Group. All rights reserved. Version SP2ONG 2019-2021 (v2021)" />
+<meta name="description" content="on.dashboard.dmr.guru" />
 </head>
 <body style="background-color: #d0d0d0;font: 10pt arial, sans-serif;">
-<center><div style="width:1250px; text-align: center; margin-top:5px;">
-<img alt="" src="/img/logo.png" />
-</div>
+<center>
 <div style="width: 1100px;">
 <p style="text-align:center;"><span style="color:#000;font-size: 18px; font-weight:bold;"><<<system_name>>></span></p>
 <p style="text-align:center;"></p>
@@ -25,9 +23,7 @@
         <p id="masters"></p>
 </div>
 <p style="text-align: center;"><span style="text-align: center;">
-Copyright (c) 2016-2021<br>The Regents of the <a href=http://k0usy.mystrikingly.com/>K0USY Group</a>. All rights reserved.<br><a href=https://github.com/sp2ong/HBMonv2>Version SP2ONG 2019-2021</a><br><br></span>
-    <!-- THIS COPYRIGHT NOTICE MUST BE DISPLAYED AS A CONDITION OF THE LICENCE GRANT FOR THIS SOFTWARE. ALL DERIVATEIVES WORKS MUST CARRY THIS NOTICE -->
-    <!-- This is version of HBMonitor SP2ONG 2019-2021 (v2021) -->
+        Gently refactored by <a href="https://on3ure.be">ON3URE</a> for the <a href="https://dmr.guru">dmr.guru</a> project. Original code by <a href=https://github.com/sp2ong/HBMonv2>SP2ONG</a></span>
 </p>
 </center>
 </body>
